--- a/Messager/Views/Messages/AllMessages.cshtml
+++ b/Messager/Views/Messages/AllMessages.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Message>
 
-<div class="p-2 w-100 bg-dark">
+<div class="p-2 w-100 bg-dark text-light">
     Dialog
 </div>
 
@@ -14,6 +14,6 @@
         }
 </div>
 
-<div class="p-2 w-100 bg-dark">
+<div class="p-2 float-down w-100 bg-dark text-light">
     FieldForSend
 </div>
