--- a/Messager/wwwroot/css/Site.css
+++ b/Messager/wwwroot/css/Site.css
@@ -1,4 +1,18 @@
-﻿.body-content{
+﻿
+
+body {
+    /* The image used */
+    background-image: url("http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg");
+    /* Full height */
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
+
+.body-content{
     min-height: 600px;
 }
 .message-ava{
