Add Db Add EF Add class UserConversation Add classes Conversations-,Users-,Message-Repository

--- a/Messager/Views/Messages/AllMessages.cshtml
+++ b/Messager/Views/Messages/AllMessages.cshtml
@@ -1,12 +1,11 @@
-﻿@model List<Message>
-
+﻿@model MessagesAllMessagesViewModel
 <div class="p-2 w-100 bg-dark text-light">
     Dialog
 </div>
 
 <div class="p-2 row justify-content-start">
         @{
-            foreach (TextMessage mes in Model)
+            foreach (TextMessage mes in Model.messages)
             {
                 @Html.Partial("TextMessage", mes)
                 <div class="w-100"></div>
