--- a/Messager/Views/_ViewImports.cshtml
+++ b/Messager/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Messager.Data.Models
 @using Messager.Data.Models.Messages
 @using Messager.Data.Models.Conversations
+@using Messager.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
