--- a/Messager/Views/Shared/User.cshtml
+++ b/Messager/Views/Shared/User.cshtml
@@ -2,8 +2,8 @@
 @model User
 
 <div class="col-3 col-md-2">
-    <img class="img-thumbnail" src=@Model.Image alt="@Model.NickName" />
+    <img class="img-thumbnail" src=@Model.Image alt="@Model.UserName" />
     <h3>@Model.FirstName  @Model.LastName </h3>
-    <p>Phone: @Model.Phone</p>
+    <p>Phone: @Model.UserName </p>
     <p><a class="btn btn-warning" href="#">Details</a></p>
 </div>
